<resources>
    <string name="app_name">Product Search</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="app_keyhash">SOZIJk+8+8JCCrEdqPzuq+rbKmc=</string>
    <string name="facebookAppId">2226971704285763</string>
    <string name="facebookLoginProtocolScheme">fb2226971704285763</string>

    <!-- Search Fragment -->
    <string name="search">SEARCH</string>
    <string name="clear">CLEAR</string>
    <string name="zipcode">zipcode</string>
    <string name="current_location">Current Location</string>
    <string name="from">From</string>
    <string name="miles_from_hint">Miles from</string>
    <string name="enable_nearby_search">Enable Nearby Search</string>
    <string name="free_shipping">Free Shipping</string>
    <string name="local_pickup">Local Pickup</string>
    <string name="shipping_options">Shipping Options</string>
    <string name="unspecified">Unspecified</string>
    <string name="used">Used</string>
    <string name="new_condition">New</string>
    <string name="keyword">Keyword</string>
    <string name="enter_keyword">Enter Keyword</string>
    <string name="category">Category</string>
    <string name="condition">Condition</string>
    <string-array name="category_options">
        <item>All</item>
        <item>Art</item>
        <item>Baby</item>
        <item>Books</item>
        <item>Clothing, Shoes &amp; Accessories</item>
        <item>Computers, Tablets &amp; Networking</item>
        <item>Health &amp; Beauty</item>
        <item>Music</item>
        <item>Video games &amp; Consoles</item>
    </string-array>
    <string name="title_activity_search_results">Search Results</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <string name="title_activity_fab">FabActivity</string>
    <string-array name="sortby">
        <item>Default</item>
        <item>Name</item>
        <item>Price</item>
        <item>Days</item>
    </string-array>
    <string-array name="sortorder">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

</resources>
