<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
       >

        <TextView
            android:id="@+id/textView_keyword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:text="@string/keyword" />

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>

        <EditText
            android:id="@+id/editText_keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView_keyword"
            android:layout_below="@+id/textView_keyword"
            android:ems="10"
            android:hint="@string/enter_keyword"
            android:inputType="textPersonName" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/keyword_field_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@+id/editText_keyword"
            layout_alignLeft="@+id/editText_keyword"
            >
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editText_keyword"
            android:layout_below="@+id/keyword_field_parent"
            android:layout_marginTop="10dp"
            android:text="@string/category" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/textView_category"
            android:layout_below="@+id/textView_category"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/textView_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/spinner_category"
            android:layout_below="@+id/spinner_category"
            android:layout_marginTop="10dp"
            android:text="@string/condition" />

        <LinearLayout
            android:id="@+id/linearlayout_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView_condition"
            android:layout_below="@+id/textView_condition"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal"
            >

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_condition"
                android:button="@drawable/abc_btn_check_material"
                android:theme="@style/CheckboxStyle"
                android:paddingLeft="2dp"
                android:layout_marginRight="0dp"
                android:id="@+id/checkbox_New"
                android:checked="false"
                android:layout_weight="1" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/used"
                android:button="@drawable/abc_btn_check_material"
                android:theme="@style/CheckboxStyle"
                android:paddingLeft="2dp"
                android:id="@+id/checkBox_Used"
                android:checked="false"
                android:layout_weight="1" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unspecified"
                android:button="@drawable/abc_btn_check_material"
                android:theme="@style/CheckboxStyle"
                android:paddingLeft="2dp"
                android:id="@+id/checkbox_Unspecified"
                android:checked="false"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_shipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/spinner_category"
            android:layout_below="@+id/linearlayout_condition"
            android:layout_marginTop="10dp"
            android:text="@string/shipping_options" />

        <LinearLayout
            android:id="@+id/linearlayout_shipping"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView_condition"
            android:layout_below="@+id/textView_shipping"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/local_pickup"
                android:button="@drawable/abc_btn_check_material"
                android:theme="@style/CheckboxStyle"
                android:paddingLeft="5dp"
                android:id="@+id/checkbox_local"
                android:checked="false"
                android:layout_weight="1" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_shipping"
                android:paddingLeft="0dp"
                android:button="@drawable/abc_btn_check_material"
                android:theme="@style/CheckboxStyle"
                android:id="@+id/checkbox_freeShipping"
                android:checked="false"
                android:layout_weight="1" />

        </LinearLayout>
        <TextView
            android:id="@+id/textView_enable_nearby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/linearlayout_shipping"
            android:layout_below="@+id/linearlayout_shipping"
            android:layout_marginTop="18dp"
            android:text="Enable Nearby Search" />

        <CheckBox
            android:id="@+id/checkBox_nearby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearlayout_shipping"
            android:layout_alignBaseline="@+id/textView_enable_nearby"
            android:layout_alignParentStart="true"
            android:layout_marginStart="160dp"
            android:layout_marginTop="8dp"
            android:button="@drawable/abc_btn_check_material"
            android:theme="@style/CheckboxStyle" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/checkBox_nearby"
            android:layout_marginTop="0dp"
            android:visibility="gone"
            android:id="@+id/relativeLayout_nearby">

            <EditText
                android:id="@+id/editText_MilesFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/miles_from_hint"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/editText_MilesFrom"
                android:layout_marginTop="8dp"
                android:text="@string/from" />


            <RadioButton
                android:id="@+id/radioButton_currentlocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView_from"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:checked="true"
                android:theme="@style/CheckboxStyle"
                android:text="@string/current_location" />

            <RadioButton
                android:id="@+id/radioButton_zip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_alignStart="@+id/radioButton_currentlocation"
                android:layout_below="@+id/radioButton_currentlocation"
                android:theme="@style/CheckboxStyle"
                android:layout_marginTop="10dp" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView_zip"
                android:layout_width="match_parent"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/radioButton_zip"
                android:layout_alignBottom="@+id/radioButton_zip"
                android:layout_toEndOf="@+id/radioButton_zip"
                android:hint="@string/zipcode"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/autocomplete_field_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/autoCompleteTextView_zip"
                layout_alignLeft="@+id/autoCompleteTextView_zip"
                >
            </android.support.design.widget.TextInputLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/relativeLayout_nearby"
            android:layout_below="@+id/relativeLayout_nearby"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/cartOrange"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/search" />

            <Button
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/cartOrange"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textColor="@android:color/white"
                android:text="@string/clear" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>